qtdoc-opensource-src (5.9.2-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.9.2.
  * Add new module: qtwebview.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 27 Oct 2017 22:17:42 +0300

qtdoc-opensource-src (5.9.1-2) unstable; urgency=medium

  * Release to unstable.
  * Remove Qt Speech from the list of available doc, it is still experimental
    material.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 16 Aug 2017 15:37:35 -0300

qtdoc-opensource-src (5.9.1-1) experimental; urgency=medium

  [ Simon Quigley ]
  * New upstream release.
  * Add myself to Uploaders.

  [ Dmitry Shachnev ]
  * Bump Qt build-dependencies to 5.9.1.
  * Add new modules: qtcharts, qtspeech.
  * Drop debian/qt5-doc-html.links, all Qt documentation should be in the
    same directory to avoid broken links (closes: #858615).
  * Bump Standards-Version to 4.0.0, no changes needed.
  * Bump years in debian/copyright.
  * Stop overriding dh_installdocs. LGPL_EXCEPTION.txt no longer exists.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 18 Jul 2017 11:54:29 +0300

qtdoc-opensource-src (5.7.1-2) unstable; urgency=medium

  * Add new modules: qt3d, qtquickcontrols2, qtwayland, qtwebchannel and
    qtwebengine.
  * Update debian/copyright.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 17 Jan 2017 16:32:36 +0300

qtdoc-opensource-src (5.7.1-1) unstable; urgency=medium

  * New upstream release.
    - Bump Qt build dependencies and dependencies.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 20 Dec 2016 16:58:04 -0300

qtdoc-opensource-src (5.7.1~20161122-1) unstable; urgency=medium

  * New upstream snapshot.
    - Bump Qt dependencies to 5.7.1~20161021.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 30 Nov 2016 11:51:28 -0300

qtdoc-opensource-src (5.6.1-1) unstable; urgency=medium

  [ Dmitry Shachnev ]