@@ -8,7 +8,7 @@ Uploaders: Sune Vuorela <debian@pusling.com>,
            Timo Jyrinki <timo@debian.org>,
            Dmitry Shachnev <mitya57@debian.org>,
            Simon Quigley <tsimonq2@ubuntu.com>
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper (>= 10.3),
                libqt5sql5-sqlite (>= 5.9.2+dfsg~),
                qt3d5-doc-html (>= 5.9.2+dfsg~),
                qtbase5-dev (>= 5.9.2+dfsg~),
